[package]
name = "archivii"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version="1.0.149", features = ["derive"]}
serde_json = "1.0.89"
soup = "0.5.1"
reqwest = { version = "0.11.13", features = ["json", "blocking", "cookie_store", "cookies"] }
tokio = { version = "1", features = ["full"] }
data-encoding = "2.4.0"
